# plover_websocket_server

./: .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml  setup.cfg
.github/workflows/: pytest.yml
plover_engine_server/: config.py  errors.py  listens.py  manager.py  server.py
plover_engine_server/websocket/: app_keys.py  example_client.py  routes.py  server.py  views.py
tests/: client_example.py  test_server.py
