[build-system]
requires = ["setuptools>=61.2"]
build-backend = "setuptools.build_meta"

[project]
name = "plover_engine_server_2"
version = "0.1.2"
description = "A server for exposing Plover engine events and functionality"
authors = [{name = "Nick Markopoulos", email = "nsmarkop@gmail.com"}]
license = {text = "GNU General Public License v3 or later (GPLv3+)"}
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Plugins",
    "Intended Audience :: End Users/Desktop",
    "License :: OSI Approved :: GNU General Public License v3 or later (GPLv3+)",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.6",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
]
keywords = ["plover plover_plugin"]
dependencies = [
    "plover>=4.0.0.dev8",
    "aiohttp",
    "aiohttp_middlewares",
    "jsonpickle",
    "nacl_middleware"
]

[project.readme]
file = "README.md"
content-type = "text/markdown"

[project.urls]
Homepage = "https://github.com/user202729/plover_websocket_server"

[project.entry-points."plover.extension"]
plover_engine_server = "plover_engine_server.manager:EngineServerManager"

[tool.setuptools]
zip-safe = true
packages = [
    "plover_engine_server",
    "plover_engine_server.websocket",
]
include-package-data = false

[project.optional-dependencies]
test = [
    "pytest",
    "PyQt5"
]

dev = [
    "build",
    "black",
    "flake8",
    "isort",
    "pip-tools",
    "bumpversion",
    "twine"
]
