[metadata]
name = plover_engine_server_2
version = 0.1.0
description = A server for exposing Plover engine events and functionality
long_description = file: README.md
long_description_content_type = text/markdown
author = Nick Markopoulos
author_email = nsmarkop@gmail.com
license = GNU General Public License v3 or later (GPLv3+)
url = https://github.com/user202729/plover_websocket_server
classifiers =
    Development Status :: 4 - Beta
    Environment :: Plugins
    Intended Audience :: End Users/Desktop
    License :: OSI Approved :: GNU General Public License v3 or later (GPLv3+)
    Operating System :: OS Independent
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
keywords = plover plover_plugin

[options]
zip_safe = True
install_requires =
    plover>=4.0.0.dev8
    aiohttp
    jsonpickle
packages =
    plover_engine_server
    plover_engine_server.websocket

[options.entry_points]
plover.extension =
    plover_engine_server = plover_engine_server.manager:EngineServerManager
